modification du modèle pour reinitialiser la base

--- a/recommendation/templates/movies_list.html
+++ b/recommendation/templates/movies_list.html
@@ -1,6 +1,6 @@
-{% extends 'index.html' %}
+<!--{% extends 'index.html' %}
 {% block movies_list %}
-<!DOCTYPE html>
+<!DOCTYPE html>-->
 
 <body>
 
@@ -27,4 +27,4 @@
 </body>
 
 </html>
-{% endblock %}
+<!--{{% endblock %}-->
