--- a/recommendation/templates/index.html
+++ b/recommendation/templates/index.html
@@ -10,14 +10,15 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="{{url_for('static', filename = 'css/main.css')}}" />
-
 	</head>
 	<body>
 
 		<!-- Header -->
 			<header id="header" class="alt">
 				<div class="logo"><a href="index.html">VosFilms <span>par Malick</span></a></div>
+				<img id="r-1060983" data-claire-element-id="1061343" src="http://www.siteduzero.com/favicon.ico" alt="Image utilisateur">
 			</header>
+
 
 		<!-- Nav -->
 			<nav id="menu">
@@ -4954,8 +4955,10 @@
 
 		<!-- Footer -->
 			<footer id="footer">
+
 				<div class="container">
 					<ul class="icons">
+
 						<li><a href="https://lc.cx/fQn6" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 
 						<li><a href="https://lc.cx/fQnQ" class="icon fa-linkedin"><span class="label">Linked In</span></a></li>
