Ajout du href pour l url du logo superieur gauche

--- a/recommendation/templates/index.html
+++ b/recommendation/templates/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">VosFilms <span>par Malick</span></a></div>
+				<div class="logo"><a href="https://konate-malick-recommend-movies.herokuapp.com/">VosFilms <span>par Malick</span></a></div>
 				<img id="r-1060983" data-claire-element-id="1061343" src="http://www.siteduzero.com/favicon.ico" alt="Image utilisateur">
 			</header>
 
